--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body,html{
     height: 500px;
     width: 100%;
     position: relative;
-    background-image: url("/images/home-bg.jpg");
+    background-image: url("/img/home-bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
