--- a/style.css
+++ b/style.css
@@ -1,52 +1,72 @@
-
-*{
+* {
     font-family: 'Roboto', sans-serif;
     scroll-behavior: smooth;
 }
 
-body,html{
+html,
+body {
     overflow-x: hidden;
+    height: 100%;
     width: 100%;
-    margin: 0;
     padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+
 }
 
+/* hamburger */
+
+.hamburger {
+    margin-right: 30px;
+    cursor: pointer;
+    display: none;
+}
+
+
+
+
+
+
+
 /* header containers */
-.nav-container{
+.nav-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    background:#3A5A40;
+    background: #3A5A40;
+    position: relative;
 }
 
-.list{
+.list {
     display: inline-flex;
     gap: 35px;
     list-style: none;
     margin-right: 40px;
+
 }
 
 /* side styling header */
 
-.list a{
+.list a {
     text-decoration: none;
     color: #fff;
     font-weight: 100;
-    
+
+
 }
 
-.list li:hover{
-   transition: .6s;
-   color: #000;
+.list li:hover {
+    transition: .6s;
+    color: #000;
 }
 
-#bold{
+#bold {
     font-weight: 600;
 }
 
-.logo{
-    margin-left: 40px ;
+.logo {
+    margin-left: 40px;
     color: #fff;
     font-size: 25px;
 }
@@ -54,16 +74,16 @@ body,html{
 /* home section */
 /* containers */
 
-#home-section{
+#home-section {
     height: 500px;
     width: 100%;
     position: relative;
-    background-image: url("/img/home-bg.jpg");
+    background-image: url("/images/home-bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.home-main-container{
+.home-main-container {
     display: block;
     position: absolute;
     top: 150px;
@@ -73,18 +93,18 @@ body,html{
 
 /* side styling home section*/
 
-.home-title{
+.home-title {
     font-size: 25px;
     font-weight: 100;
     margin-bottom: 5px;
 }
 
-.home-text{
+.home-text {
     font-size: 40px;
     font-weight: 600;
 }
 
-.arrow-bg{
+.arrow-bg {
     display: inline-block;
     background-color: #3A5A40;
     padding: 15px;
@@ -92,17 +112,19 @@ body,html{
     margin-top: 45px;
 }
 
-.arrow-bg:hover{
+.arrow-bg:hover {
     transition: .6s;
     scale: 1.1;
 }
+
 /* startnow containers */
-#startnow-section{
+#startnow-section {
     height: 450px;
     width: 100%;
-    background:#DAD7CD;
+    background: #DAD7CD;
 }
-.startnow-main-container{
+
+.startnow-main-container {
     display: flex;
     justify-self: center;
     align-items: center;
@@ -111,196 +133,379 @@ body,html{
     font-weight: 600;
 }
 
-.startnow-left-container{
+.startnow-left-container {
     display: block;
     text-wrap: balance;
     margin-left: 20px;
-    
+
 }
 
 /* starnow side styling */
 
-.startnow-title{
+.startnow-title {
     margin-bottom: 20px;
     font-size: 20px;
 }
 
-.startnow-text{
+.startnow-text {
     margin-bottom: 20px;
 }
 
-.startnow-btn{
+.startnow-btn {
     padding: 17px;
-    background:#3A5A40;
-    border:none;
+    background: #3A5A40;
+    border: none;
     outline: none;
     cursor: pointer;
-    border-radius :10px;
+    border-radius: 10px;
     width: 150px;
     color: #fff;
     font-weight: 600;
 }
 
-.startnow-btn:hover{
+.startnow-btn:hover {
     transition: .6s;
-    background:#344E41 ;
+    background: #344E41;
 
 }
 
-.startnow-right-container img{
-   height: 455px;
-   width: 156.25rem;
+.startnow-right-container img {
+    height: 455px;
+    width: 156.25rem;
 }
 
 /* about us section */
 
-#aboutus-section{
+#aboutus-section {
     height: 450px;
-    background:#000
+    background: #000
 }
 
-.aboutus-main-container{
+.aboutus-main-container {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     color: #fff;
-    
+
 }
 
-.aboutus-left-container{
+.aboutus-left-container {
+    display: flex;
+    flex-direction: column;
     margin-left: 25px;
 }
 
 /* side styling aboutus */
 
-.aboutus-main-container img{
-    width: 600px;
+.aboutus-main-container img {
+    width: 500px;
     height: 450px;
 }
-.aboutus-title{
+
+.aboutus-title {
     font-size: 20px;
     margin-bottom: 20px;
 }
-.about-us-btn{
+
+.about-us-btn {
     margin-top: 20px;
     padding: 17px;
-    background:#3A5A40;
-    border:none;
+    background: #3A5A40;
+    border: none;
     outline: none;
     cursor: pointer;
-    border-radius :10px;
+    border-radius: 10px;
     width: 200px;
     color: #fff;
     font-weight: 600;
 }
 
-.about-us-btn:hover{
+.about-us-btn:hover {
     transition: .6s;
-    background:#344E41 ;
+    background: #344E41;
 }
+
 /* clients section */
 
-#clients-section{
+#clients-section {
     height: 550px;
     width: 100%;
     background: #000;
 }
-.cards-main-container{
+
+.cards-main-container {
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     color: #fff;
     gap: 30px;
-    
+
 }
 
 /* side styling clients */
 
-.clients-title{
+.clients-title {
     text-align: center;
     color: #fff;
     padding: 25px;
     font-size: 25px;
 }
 
-.card{
+.card {
     margin-top: 30px;
-    background:#DAD7CD;
+    background: #DAD7CD;
     padding: 15px;
     height: 400px;
     width: 300px;
     border-radius: 20px;
     color: #000;
-    line-height: 40px;
-    
+    line-height: 33px;
+
 }
 
-.card:hover{
+.card:hover {
     transition: .6s;
     box-shadow: #A3B18A 0px 7px 29px 0px;
 }
 
-.card h4{
+.card h4 {
     font-size: 25px;
 }
 
-hr{
+hr {
     border: 5px solid #A3B18A;
     border-radius: 20px;
     margin-top: 20px;
     margin-bottom: 15%;
 }
 
-.card:first-child{
-    margin-left:30px;
+.card:first-child {
+    margin-left: 30px;
 }
-.card:last-child{
+
+.card:last-child {
     margin-right: 30px;
 }
 
 /* footer */
 
-#footer{
+#footer {
     height: 200px;
     width: 100%;
-    background:#3A5A40;
+    background: #3A5A40;
 }
 
-.footer-main-container{
+.footer-main-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: #fff;
     padding: 60px;
+    overflow: hidden;
 }
 
-
-.media-container{
+.media-container {
     display: flex;
     gap: 20px;
+    margin-top: 6px;
 }
 
 /* side styling footer */
 
-.links-footer a{
-    list-style:inside ;
+.links-footer a {
+    list-style: inside;
     color: #fff;
     text-decoration: none;
-    
+
 }
 
-.footer-main-container svg{
+.footer-main-container svg {
     cursor: pointer;
 }
 
-.RRSS:hover{
+.RRSS:hover {
     transition: .6s;
     transform: translateY(-10px);
 }
 
-.RRSS1:hover{
+.RRSS1:hover {
     transition: .6s;
     transform: translateY(10px);
+}
+
+/* responsive design */
+
+@media screen and (max-width:750px) {
+    .startnow-main-container {
+        flex-direction: column;
+    }
+
+    #startnow-section {
+        height: 650px;
+    }
+
+    .startnow-left-container {
+        text-align: center;
+        margin-top: 35px;
+    }
+
+    /* startnow side styling responsive */
+    .startnow-title {
+        margin-bottom: 20px;
+        font-size: 25px;
+    }
+
+    .startnow-right-container img {
+        height: 355px;
+        width: 80vw;
+        border-radius: 5px;
+        margin-top: 35px;
+    }
+
+    /* about us responsive */
+
+    #aboutus-section {
+        height: 650px;
+        background: #000
+    }
+
+    .aboutus-main-container {
+        flex-direction: column-reverse;
+    }
+
+    .aboutus-left-container {
+        text-align: center;
+        align-items: center;
+        text-wrap: balance;
+    }
+
+    /* side styling aboutus responsive */
+
+    .aboutus-main-container img {
+        width: 80vw;
+        height: 335px;
+        border-radius: 5px;
+        margin-top: 35px;
+    }
+
+    .aboutus-title {
+        font-size: 25px;
+        margin-bottom: 15px;
+    }
+
+    /* clients section responsive */
+
+    #clients-section {
+        height: 1175px;
+    }
+
+    .cards-main-container {
+        flex-direction: column;
+    }
+
+    /* side styling clients responsive */
+    .card {
+        margin-top: 30px;
+        height: 300px;
+        width: 70vw;
+        line-height: 30px;
+
+    }
+
+    .card:first-child {
+        margin-left: 0;
+    }
+
+    .card:last-child {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+}
+
+@media screen and (max-width:600px) {
+    .links-footer {
+        display: none;
+    }
+
+    .hamburger {
+        display: block;
+    }
+
+    .list {
+        opacity: 0;
+        height: 0;
+        position: absolute;
+        top: 50px;
+        left: 0;
+        right: 0;
+        margin-right: 0;
+        z-index: 10;
+        background: #3A5A40;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        overflow: hidden;
+        transition: ease .4s;
+        width: 100vw;
+        font-size: 30px;
+        text-align: center;
+    }
+
+    .list.active {
+        height: 600px;
+        opacity: 1;
+        transition: ease .4s;
+    }
+
+}
+
+
+@media screen and (max-width:465px) {
+    .home-title {
+        font-size: 23px;
+    }
+
+    .home-text {
+        font-size: 35px;
+    }
+
+    .startnow-right-container img {
+        height: 315px;
+        margin-top: 5px;
+        margin-left: 15px;
+    }
+
+    .aboutus-main-container img {
+        height: 315px;
+        margin-top: 35px;
+    }
+
+    .card {
+        line-height: 23px;
+    }
+
+    .card:last-child {
+        margin-right: 0;
+
+    }
+}
+
+@media screen and (max-width:425px) {
+    .footer-main-container {
+        display: flex;
+        flex-direction: column;
+        font-size: 14px;
+
+    }
+
+    .card {
+        height: 290px;
+        font-size: 13px;
+
+    }
+
 }
