--- a/css/shop.css
+++ b/css/shop.css
@@ -18,6 +18,8 @@ h4{
     margin-bottom: 30px;
     width: 80%;
     border-bottom: 6px solid #344E41;
+    display: flex;
+    align-items: center;
 }
 
 .texto-principal h1,.texto-principal h2{
@@ -28,6 +30,11 @@ h4{
 .texto-principal h1{
    
     margin-bottom: -40px;
+}
+
+.texto-principal img{
+    height: 200px;
+    padding-left: 5vw;
 }
 
 
