--- a/css/index.css
+++ b/css/index.css
@@ -33,6 +33,7 @@ body {
     left: 20px;
     color: #fff;
     margin-left: 30px;
+     z-index: 1;
 }
 
 /* side styling home section*/
@@ -43,6 +44,7 @@ body {
     margin: 0;
     padding-top: 150px;
     padding-bottom: 5px;
+    z-index: 1;
 
 }
 
