--- a/css/contacto.css
+++ b/css/contacto.css
@@ -13,10 +13,6 @@ a:active {
 li a{
     color: white;
     font-weight: 300;
-    padding: 10px 15px;
-}
-#but_shop a:hover{
-    background-color: red;
 }
 input{
     border-style: none;
@@ -48,7 +44,7 @@ h1{
     font-size: 80px;
     text-align: left;
 }
-body{
+.container{
     margin: auto;
     width: 100%;
     font-size: 15px;
@@ -103,9 +99,6 @@ body > nav > ul > li:nth-child(4) > a{
     list-style: none;
     gap: 50px;
 }
-.menu a:hover {
-    background-color: rgba(255, 255, 255, 0.2); /* Cambia el color de fondo al pasar el mouse */
-  }
 .main1{
     grid-area: main1;
 }
@@ -113,7 +106,7 @@ body > nav > ul > li:nth-child(4) > a{
     grid-area: main2;
 }
 .contenedor{
-    max-width: 700px;
+    width: 700px;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
@@ -136,8 +129,8 @@ body > nav > ul > li:nth-child(4) > a{
     background: #3A5A40;
     border-radius: 30px;
 }
-.cont_gim{
-    width: 100%;
+.cont_gim,.cont_tienda{
+    width: 50%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -220,6 +213,10 @@ label{
 }
 
 /*IMAGEN*/
+
+.cont_izq_dentro{
+    margin-top: 50px;
+}
 .cont_izq_dentro img{
     max-width: 100%;
     width: 70%;
@@ -227,21 +224,10 @@ label{
 
 
 .cont_izq_dentro h1 {
-    /* Estilo común para ambos h1 */
-    position: relative; /* Para permitir posicionar la línea vertical */
+    border-left: 5px solid #588157;
     padding-left: 10px; /* Espacio entre el borde izquierdo y el texto */
 }
 
-.cont_izq_dentro h1:before {
-    /* Pseudo-elemento :before para crear la línea vertical */
-    content: '';
-    position: absolute;
-    left: 0; /* Coloca la línea al principio del contenedor */
-    top: 0; /* Alinea la línea con la parte superior del contenedor */
-    height: 100%; /* Estira la línea a lo largo de todo el contenedor */
-    width: 6px; /* Ancho de la línea */
-    background-color: #588157; /* Color de la línea */
-}
 
 .contacto:before {
     /* Estilos específicos para el texto 'CONTACTO' */
@@ -253,17 +239,6 @@ label{
     /* Estilos específicos para el texto 'AYUDA' */
     /* Puedes ajustar estos estilos según sea necesario */
     background-color: #588157; /* Color de la línea */
-}
-
-footer{
-    background-color: rgba(58, 90, 64, 1);
-    color: white;
-    padding: 20px 0;
-    grid-area: footer;
-}
-.footer_texto{
-    width: 100%;
-    text-align: center;
 }
 
 .result_formulario {
