--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,1 +1,114 @@
-<h1>hola</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/nav-footer-menu.css">
+    <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Maven+Pro:wght@500;800;900&family=Oswald:wght@500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <script src="/js/style.js" defer></script>
+    <title> NNST | GYM</title>
+</head>
+
+<body>
+
+    <header>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="/home">Inicio</a></li>
+                <li><a href="/shop">Shop</a></li>
+                <li><a href="/sobreNosotros">Sobre Nosotros</a></li>
+                <li><a href="/contacto">Contacto</a></li>
+                <li><a href="/admin">Admin</a></li>
+            </ul>
+            <div class="menu-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
+        </nav>
+    </header>
+    
+    <section id="home-section">
+        <article class="home-main-container">
+            <h3 class="home-title zoomIn">#DESAFIATUCUERPO</h3>
+            <p class="home-text">Empieza tu transformación aquí.</p>
+            <a href="#startnow-section" class="arrow-bg">
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"
+                    style="fill: #fff ;">
+                    <path d="m18.707 12.707-1.414-1.414L13 15.586V6h-2v9.586l-4.293-4.293-1.414 1.414L12 19.414z">
+                    </path>
+                </svg>
+            </a>
+        </article>
+    </section>
+
+    <section id="startnow-section">
+        <article class="startnow-main-container">
+            <div class="startnow-left-container">
+                <h3 class="startnow-title">¡Empeza ya!</h3>
+                <p class="startnow-text">¿Buscas una experiencia atlética emocionante? Este es el lugar para
+                    encontrarlo.
+                    Nuestros instructores expertos realmente saben lo que hacen y se preocupan profundamente por su
+                    experiencia. Tendrás un entrenamiento intenso, divertido y desafiante en todo momento.</p>
+                <button class="startnow-btn">Contactanos</button>
+            </div>
+            <div class="startnow-right-container">
+                <img src="img/img1.jpg" alt="image1">
+            </div>
+        </article>
+    </section>
+
+    <section id="aboutus-section"> <article class="aboutus-main-container">
+        <img src="img/img2.jpg" alt="image2">
+        <div class="aboutus-left-container">
+            <h3 class="aboutus-title">Nosotros</h3>
+            <p class="aboutus-text">Nuestros instructores saben lo que hacen y se preocupan profundamente por su
+                experiencia. Hacemos todo lo posible para garantizar que tengas un entrenamiento intenso, divertido
+                y desafiante en todo momento.
+            </p>
+            <button class="about-us-btn">+ Info</button>
+        </div>
+        </article>
+    </section>
+
+    <section id="clients-section">
+        <article class="clients-main-container">
+            <h3 class="clients-title">Personas que entrenaron con nosotros</h3>
+            <div class="cards-main-container">
+                <div class="card">
+                    <h4>Maria</h4>
+                    <hr>
+                    <p>"Este gimnasio ha transformado mi vida. Las clases variadas y el apoyo del equipo me han ayudado
+                        a
+                        alcanzar mis metas. ¡Gracias por crear un ambiente motivador y acogedor!"</p>
+                </div>
+                <div class="card">
+                    <span class="line"></span>
+                    <h4>Juan</h4>
+                    <hr>
+                    <p>"Me sorprendió gratamente lo cómodo que me sentí aquí desde el primer día. Los resultados han
+                        sido increíbles y estoy ansioso por seguir mejorando." </p>
+                </div>
+                <div class="card">
+                    <h4>Ana</h4>
+                    <hr>
+                    <p>"Como madre ocupada, encontrar tiempo para el ejercicio era difícil, pero este gimnasio lo hace
+                        posible. Las opciones flexibles y el apoyo constante han hecho una gran diferencia en mi vida."
+                    </p>
+                </div>
+            </div>
+        </article>
+    </section>
+
+    <footer>
+        <h4>Redes sociales</h4>
+        <a href="#"><i class="fab fa-facebook-square"></i></a>
+        <a href="#"><i class="fab fa-instagram-square"></i></a>
+        <p>Derechos de autor &copy; 2024 Grupo 8 CaC. Todos los derechos reservados.</p>
+    </footer>
+    <script src="/js/script.js"></script>
+</body>
+
+</html>
